2008-07-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_config.erl: If syntax mistake in config file, show
	specific error message (EJAB-616)

2008-07-22  Alexey Shchepin  <alexey@process-one.net>

	* src/odbc/odbc_queries.erl: Fixed a typo

2008-07-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/ejabberd_ctl.erl: Call reopen_log_hook for each virtual host.

2008-07-17  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Fix to allow a server admin to add
	himself as owner of a room (EJAB-687)

2008-07-17  Christophe Romain  <christophe.romain@process-one.net>

	* src/web/Makefile.in: use -DSSL39 if compiling with R12

2008-07-16  Badlop  <badlop@process-one.net>

	* src/ejabberd_c2s.erl: Put auth_module in Info always (EJAB-549)

	* src/*.hrl: Get back all ejabberd header files to their original
	placement in src/ subdirectories (EJAB-696)
	* src/*/*.erl: Likewise
	* src/*/Makefile.in: Likewise
	* src/Makefile.in: Install header files in system include/ dir,
	reproducing the subdirectory structure of src/

	* src/ejabberdctl.template: Update environment variable names

2008-07-15  Badlop  <badlop@process-one.net>

	* src/ejabberdctl.template: Small fix so arguments of the command
	are also passed to erl

	* doc/guide.tex: Improve explanation of option 'hosts' in
	ejabberd_service
	* doc/guide.html: Likewise

2008-07-15  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_http_poll.erl: Report connection's IP address

	* src/ejabberd_c2s.erl: Rolled back the previous IP getting patch
	* src/ejabberd_sm.erl: Likewise
	* src/ejabberd_receiver.erl: Likewise
	* src/web/ejabberd_http_poll.erl: Likewise

2008-07-14  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Update what permissions does enable-user grant
	* doc/guide.html: Likewise

	* src/configure.ac: Don't explicitely put root privileges when a
	user is not explicitely enabled
	* src/configure: Likewise
	* src/Makefile.in: Likewise
